doc: correção de bugs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="icon" href="assets/img/logoAlura.png">
     <title>Challenger-Encriptador One|Alura</title>
 </head>
 <body>
@@ -17,8 +18,8 @@
             <textarea class="container__text-area" placeholder="Digite seu texto" id="textarea" cols="30" rows="10"></textarea>
             <p class="container__notice">Apenas letras minúsculas e sem acentos.</p>
             <div class="buttons">
-                <button onclick="btnEncript()" class="btn encrypt">Criptografar</button>
-                <button onclick="bntDesencript()" class="btn decrypt">Descriptografar</button>
+                <button onclick="btnEncrypt()" class="btn encrypt">Criptografar</button>
+                <button onclick="bntDecrypt()" class="btn decrypt">Descriptografar</button>
             </div>
         </section>
         <section class="mensagem-area">
@@ -30,7 +31,7 @@
                 <h1>Nenhuma mensagem encontrada</h1>
                 <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
             </div>
-                <button onclick="copiarEremoverCards()" class="btn copy" id="copy">Copiar</button>
+                <button onclick="copyRemoveCards()" class="btn copy" id="copy">Copiar</button>
         </section>
     </main>
 </body>
